# EcoSchoolMap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FORCE_SIMULATION_IMPROVEMENTS.md  FORCE_SIMULATION_TEST_FRAMEWORK.md  NORMALIZATION_ANALYSIS_REPORT.md  PLAN_COLISIONES.md  PLAN_CORRECCION_POSICIONES.md  README.md  SCORING.md  SETUP.md  TESTING.md  TODO.txt  force_test_results.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start_server.bat  test_output.txt  vite.config.js
.claude/: settings.local.json
data/: escuelas.json  escuelas.json.backup.20251116  escuelas.json.backup_20251025_184203  escuelas.json.backup_20251025_184732  escuelas.json.backup_20251113_112645  escuelas.json.backup_20251113_112757  escuelas.json.backup_20251113_112844  escuelas.json.backup_20251119_110256
data/variants/: balanced-minmax.json  balanced-percentile.json  base-minmax.json  base-none.json  base-percentile.json  base-zscore.json  equity-emphasis-minmax.json  state-emphasis-none.json  (+21 more)
docs/: index.html  mapa_escuelas.html
scripts/: compare_weight_results.py  comparison_test.js  config.py  detect_overlaps.py  diagnose_collision_positions.js  generate_interactive_plot.py  generate_static_plot.py  generate_weight_variants.py  production_toggle_test.js  quick_toggle_diagnostic.js  recalculate_positions.py  scoring_methodology.py  simple_force_test.js  sync_data.py  sync_toggle_test.js  test_force_parameters.js  test_force_simulation.js  test_force_simulation_node.js  test_selective_collisions.js  update_positions.py  validate_variants.py
src/: main.js
(+122 files in other folders)
